Multiple Samplers, Improved UI for dynamic scaling.

--- a/MongoMigrationWebApp/Components/ManageCollections.razor
+++ b/MongoMigrationWebApp/Components/ManageCollections.razor
@@ -146,9 +146,20 @@
                     </div>
                 }
 
+               
+
                 <div class="mt-3">
                     <label for="nameSpaces" class="form-label">Collections To Add</label>
                     <textarea id="nameSpaces" @bind="newCollection" rows="4" placeholder="e.g. db1.col1,db1.col2,db2.col1,db2.col5 or use wildcards like *.collection, database.*, *.* or CollectionInfo JSON format as described in readme" class="form-control" />
+
+                    <div class="mt-3 mb-3 checkbox-container">
+                        <div class="checkbox-group">
+                            <label title="Check this if all new collections being added use MongoDB ObjectId for the _id field. This optimizes partitioning and improves migration performance.">
+                                <input type="checkbox" id="allCollectionsUseObjectId" @bind="allCollectionsUseObjectId" />
+                                All new collections use ObjectId for the _id field
+                            </label>
+                        </div>
+                    </div>
                     <button class="btn btn-primary btn-sm mt-2" @onclick="AddCollectionAsync" disabled="@isAddingCollections">
                         @if (isAddingCollections)
                         {
@@ -202,6 +213,7 @@
     private List<MigrationUnit> updatedMigrationUnits = new List<MigrationUnit>();
     private bool collectionRemoved = false;
     private bool isAddingCollections = false;
+    private bool allCollectionsUseObjectId = false; // if all new collections use ObjectId for the _id field
     
     // Pagination helper
     private PaginationHelper<MigrationUnit> _paginationHelper = null!;
@@ -285,7 +297,7 @@
                 StateHasChanged(); // Update UI to show spinner
 
                 // Use the async method with SourceConnectionString parameter
-                var newunits = await Helper.PopulateJobCollectionsAsync(newCollection, SourceConnectionString ?? string.Empty);
+                var newunits = await Helper.PopulateJobCollectionsAsync(newCollection, SourceConnectionString ?? string.Empty, allCollectionsUseObjectId);
                 
                 foreach (var mu in newunits)
                 {
